[workspace]
members = [
    "packages/dega-inj",
    "contracts/dega-cw721",
    "contracts/dega-minter",
]
resolver = "2"

[workspace.package]
version         = "1.0.0"
rust-version    = "1.75.0"
edition         = "2021"
homepage        = "https://www.dega.org"
# TODO Replace with final URL
repository      = "https://github.com/CerratoA/inj-contracts"
license         = "None (all rights reserved)"
authors         = ["DEGA Labs", "Unamint Studios", "Will Stahl <will@stahl.cc>"]
publish         = false

[workspace.dependencies]
cosmwasm-std            = { version = "1.2.1" }
cosmwasm-schema         = { version = "1.2.1" }
cw-storage-plus         = { version = "1.1.0" }
cw2                     = { version = "1.1.0" }
cw721                   = { version = "0.18.0" }
cw721-base              = { version = "0.18.0", library = true }
cw2981-royalties        = { version = "0.18.0" }
cw-utils                = { version = "1.0.1" }
cw-multi-test           = { version = "0.16.2" }
cw-ownable              = { version = "0.5.1" }
#injective-std           = { version = "0.1.3" } # Removed due to incompatibility building without more recent version of rust
#injective-cosmwasm      = { version = "0.1.39" }
#injective-math          = { version = "0.1.23" }
ethereum-types          = { version = "0.5.2" }
schemars                = { version = "0.8.11" }
serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_repr              = { version = "0.1" }
subtle-encoding         = { version = "0.5.1", features = ["bech32-preview"] }
thiserror               = { version = "1.0.38" }
# Need to prevent sha256 from pulling in tokio
#sha256                  = { version = "1.5.0", default-features = false } # Removed in liue of sha2 which cosmwasm's crypto-verify sample uses
sha2                    = { version = "0.10" }
hex                     = { version = "0.4.3" }

# DEGA packages
dega-inj                = { version = "1.0.0", path = "packages/dega-inj" }
dega-cw721              = { version = "1.0.0", path = "contracts/dega-cw721" }
dega-minter             = { version = "1.0.0", path = "contracts/dega-minter" }
dega-inj-cli            = { version = "1.0.0", path = "cli" }

# Dev packages
coverage-helper         = { version = "0.2.2" }


[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = true
overflow-checks = true
strip = true


[profile.release.package.dega-inj-cli]
opt-level = 3
debug = true
codegen-units       = 256
incremental         = true
strip = false