[package]
name            = "dega-inj-cli"
authors         = ["Unamint Studios", "Will Stahl <will@stahl.cc>"]
version         = "1.0.0"
edition         = "2021"

[[bin]]
name = "dega-inj"
path = "src/main.rs"

[dependencies]
cosmwasm-std            = { workspace = true }
cw-storage-plus         = { workspace = true }
cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true, features = ["library"] }
cw-utils                = { workspace = true }
cw-ownable              = { workspace = true }
injective-cosmwasm      = { workspace = true }
injective-math          = { workspace = true }
ethereum-types          = { workspace = true }
schemars                = { workspace = true }
serde                   = { workspace = true }
serde_repr              = { workspace = true }
subtle-encoding         = { workspace = true }
thiserror               = { workspace = true }

sg2                     = { workspace = true }
sg721                   = { workspace = true }
sg721-base              = { workspace = true, features = ["library"] }

dega-inj                = { workspace = true }
dega-cw721              = { workspace = true }
dega-minter             = { workspace = true }

# Keeping CLI specific dependencies isolated here as they are less verified in terms of audit / security (not used in either production CW721 or SG721)
anyhow                  = { version = "1"}
env_logger              = { version = "0.10.2"}
log                     = { version = "0.4"}
serde_json              = { version = "1.0.115"}
clap                    = { version = "4.5.4", features = ["derive"] }
lazy_static             = { version = "1.4.0"}
strum                   = { version = "0.25.0"}
strum_macros            = { version = "0.25.3"}
tokio                   = { version = "1"}
interactive-parse       = { version = "0.1"}

#wasm-deploy             = { version = "0.6.0", git = "https://github.com/cryptechdev/wasm-deploy.git", rev = "2de656b", features = ["wasm-opt", "injective"]}
wasm-deploy             = { version = "0.6.0", path = "../packages/wasm-deploy", features = ["wasm-opt", "injective"]}

[dev-dependencies]
cosmwasm-schema         = { workspace = true }
cw-multi-test           = { workspace = true }

# Old DEPS
#cw20 = "1"
#cw20-base = "1"
#anyhow = "1"
#serde = "1"
#schemars = "0.8"
#cosmwasm-std = "1"
#env_logger = "0.10"
#log = "0.4"
#serde_json = "1"
#clap = { version = "4", features = ["derive"] }
#lazy_static = "1.4"
#strum = "0.25"
#strum_macros = "0.25"
#tokio = "1"
#interactive-parse = "0.1"