[package]
name            = "dega-inj-cli"
authors         = ["DEGA Labs", "Unamint Studios", "Will Stahl <will@stahl.cc>"]
version         = "1.0.0"
edition         = "2021"

[[bin]]
name = "dega-inj"
path = "src/main.rs"

[dependencies]
cosmwasm-std            = { workspace = true }
cw-storage-plus         = { workspace = true }
cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true, features = ["library"] }
cw-utils                = { workspace = true }
cw-ownable              = { workspace = true }
#injective-cosmwasm      = { workspace = true }
#injective-math          = { workspace = true }
ethereum-types          = { workspace = true }
schemars                = { workspace = true }
serde                   = { workspace = true }
serde_repr              = { workspace = true }
subtle-encoding         = { workspace = true }
thiserror               = { workspace = true }

dega-inj                = { workspace = true }
dega-cw721              = { workspace = true }
dega-minter             = { workspace = true }

# Keeping CLI specific dependencies isolated here as they are less verified in terms of audit / security
anyhow                  = { version = "1"}
env_logger              = { version = "0.10.2"}
log                     = { version = "0.4"}
serde_json              = { version = "1.0.115"}
clap                    = { version = "4.5.4", features = ["derive"] }
lazy_static             = { version = "1.4.0"}
strum                   = { version = "0.25.0"}
strum_macros            = { version = "0.25.3"}
tokio                   = { version = "1"}
interactive-parse       = { version = "0.1"}

# DEGA - Added for signing
sha3                    = "0.10"
rlp                     = { version = "0.5.2" }
k256                    = { version = "0.13.3", features = ["ecdsa"] }
ed25519-zebra           = { version = "4.0.3" }
rand_core               = { version = "0.6", features = ["getrandom"] }
# Not used directly, but needed to bump transitive dependency, see: https://github.com/CosmWasm/cosmwasm/pull/1899 for details.
ecdsa                   = { version = "0.16.2" }
p256                    = { version = "0.13.2", features = ["ecdsa"] }
hex                     = { version = "0.4" }
hex-literal             = { version = "0.4.1" }
cosmwasm-crypto         = { version = "1.2.1" }
ethers-signers          = { version = "2.0.11", optional = true }
ethers                  = { version = "2.0.11" }
bech32                  = { version = "0.9.1" }
cosmrs                  = { version = "0.14.0", features = ["rpc", "cosmwasm", "grpc"] }


#wasm-deploy             = { version = "0.6.0", git = "https://github.com/cryptechdev/wasm-deploy.git", rev = "2de656b", features = ["wasm-opt", "injective"]}
wasm-deploy             = { version = "0.6.0", path = "../packages/wasm-deploy", features = ["wasm-opt", "injective"]}
digest                  = { version = "0.10.7" }
sha2                    = { version = "0.10" }
pbkdf2                  = { version = "0.12.2" }
base64                  = { version = "0.13.1" }
colored_json            = { version = "4.1.0" }


[dev-dependencies]
cosmwasm-schema         = { workspace = true }
cw-multi-test           = { workspace = true }
