[package]
name            = "dega-minter"
authors         = ["Unamint Studios", "Will Stahl <will@stahl.cc>"]
description     = "The DEGA Injective NFT Minter smart contract"
version         = { workspace = true }
rust-version    = { workspace = true }
edition         = { workspace = true }
homepage        = { workspace = true }
repository      = { workspace = true }
license         = { workspace = true }
publish         = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    # Rust optimizer artifacts that should not be checked into version control.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer-arm64:0.12.11
"""

[dependencies]
cosmwasm-std            = { workspace = true }
cw-storage-plus         = { workspace = true }
cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true, features = ["library"] }
cw-utils                = { workspace = true }
cw-ownable              = { workspace = true }
injective-cosmwasm      = { workspace = true }
injective-math          = { workspace = true }
ethereum-types          = { workspace = true }
schemars                = { workspace = true }
serde                   = { workspace = true }
serde_repr              = { workspace = true }
subtle-encoding         = { workspace = true }
thiserror               = { workspace = true }

sg4                     = { workspace = true }
sg-mod                  = { workspace = true }
base-minter             = { workspace = true, features = ["library"] }

dega-inj                = { workspace = true }

[dev-dependencies]
cosmwasm-schema         = { workspace = true }
cw-multi-test           = { workspace = true }