[package]
name            = "sg-mod"
authors         = ["Unamint Studios", "Will Stahl <will@stahl.cc>"]
description     = "A library used to mod stargate chain dependencies in a simple way"
version         = "3.5.0"
rust-version    = { workspace = true }
edition         = { workspace = true }
homepage        = { workspace = true }
repository      = { workspace = true }
license         = { workspace = true }
publish         = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    # Rust optimizer artifacts that should not be checked into version control.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std                = { workspace = true }
cosmwasm-schema             = { workspace = true }
#injective-cosmwasm          = { workspace = true }
sg2                         = { workspace = true }
sg721                       = { workspace = true }

[dev-dependencies]